replays/errorlog-20181104-083628-0500-1541338588-32-32-1.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    elif me.halite_amount > constants.DROPOFF_COST and not built_drop and game_map.calculate_distance(ship.position,me.shipyard.position) >= r:
       ^
SyntaxError: invalid syntax

